# SGAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL.md  pyproject.toml  run.bat  run.command  run.ps1  run.sh
.github/workflows/: ci.yml  sgai-security.yml
docs/: architecture.md  demo.md  deploy.md  integrations.md  kaggle_submission.md  mcp.md  security.md
examples/: sample_report.md
examples/kaggle_demo_repo/: README.md  app.py  go.mod  package-lock.json  requirements.txt  server.js
examples/multi_lang/: app.js  go.mod  package-lock.json
examples/vulnerable_app/: app.py  requirements.txt
src/secureguard/: __init__.py  cli.py  config.py
src/secureguard/agents/: __init__.py  orchestrator.py  specialists.py
src/secureguard/mcp_server/: __init__.py  sandbox.py  server.py
src/sgai/: __init__.py  agent_runner.py  api.py  cli.py  config.py  fix.py  github.py  manifests.py  memory.py  models.py  report.py  risk.py  runner.py  sarif.py
src/sgai/agents/: __init__.py  narrator.py  orchestrator.py  security_tools.py  specialists.py
src/sgai/mcp_server/: __init__.py  sandbox.py  server.py
src/sgai/web/: index.html
tests/: test_fix.py  test_manifests.py  test_memory.py  test_report.py  test_risk.py  test_sandbox.py  test_sarif.py
