[project]
name = "sgai"
version = "0.1.0"
description = "A multi-agent security review system that audits codebases for vulnerabilities and proposes remediation."
authors = [{ name = "Ankit Ranjan", email = "ankit0ranjan@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.2.0",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "bandit>=1.7.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
sgai = "sgai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sgai"]
# Ship the web UI as package data so the deployed service can serve it.
artifacts = ["src/sgai/web/*.html"]

[tool.hatch.build.targets.wheel.force-include]
"src/sgai/web/index.html" = "sgai/web/index.html"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
